--- a/docs/_posts/2023-07-08-CLI.md
+++ b/docs/_posts/2023-07-08-CLI.md
@@ -2,24 +2,25 @@
 title: CLI
 author: jhzg
 date: 2023-07-08
-category: doc
+category: usage
 layout: post
 ---
 
-## Pre configuration
+## Configuration
 
 **usage**:
 ```shell
 bili-config [-h] --work-dir STR [--ffmpeg {None}|STR]
-            [--mark {None}|STR]
+            [--mark {None}|STR] [--language {en,ch}]
 ```
-This command is used to set the working path (used to save data or generate results), ffmpeg path (used to download 
-video or audio), and danmu mark.
+
+This command is used to set working path, ffmpeg path, language and danmaku mark.
 
 > -h, --help: show this help message and exit\
 > --work-dir: working directory of program test_output (required)\
 > --ffmpeg: the ffmpeg path in your computer (default: None)
-> --mark: mark for marking live danmu, multiple marks need to be entered consecutively (default: None)
+> --mark: mark for marking live danmaku, multiple marks need to be entered consecutively (default: None)
+> --language: the language for program prompts (default: en)
 {: .block-tip }
 
 ## Login
@@ -31,10 +32,7 @@ bili-login [-h] [--mode {1,2,3,4}] [--sessdata {None}|STR]
            [--dedeuserid {None}|STR] [--ac-time-value {None}|STR]
 ```
 
-This command is used to log in to bilibili. Some functions require login to be available, such as obtaining all 
-live-streaming danmu and downloading some videos. \
-You can log in to Bilibili using a QR code, password, or verification code, or directly specify the corresponding 
-parameters.
+This command is used to log in to bilibili. 
 
 > -h, --help: show this help message and exit\
 > --mode: login mode, 1 for scanning QR code login, 2 for password login, 3 for verification code login, 4 for 
@@ -53,10 +51,7 @@ parameters.
 bili-video [-h] {word_cloud,download}
 ```
 
-Download videos, audio or generate word image. \
-The video download format is MP4, and the audio download format is MP3. \
-The source of the word cloud can be selected as bullet screen, comments, or both, and whether to include secondary 
-comments is optional.
+Download videos, audio or generate word image. 
 
 > -h, --help: show this help message and exit\
 > {word_cloud,download}: sub-command
@@ -70,7 +65,7 @@ bili-video word_cloud [-h] [--video-id {None}|STR|INT] [--mode {1,2,3}]
                       [--sec {True,False}] [--mask {None}|STR]
 ```
 
-Generate word cloud images of video replies or danmu.
+Generate word cloud images.
 
 > -h, --help: show this help message and exit\
 > --video-id: video's aid or bvid (default: None)\
@@ -98,11 +93,8 @@ Download video or audio.
 bili-user [-h] {update,address}
 ```
 
-Update the number of users' fans, members of the Grand Navigation Group, and charging members. Collect the addresses 
-of members of the Great Navigation Group.\
-When there is enough user data, a change curve can be generated and future trends can be predicted.\
-Send private messages to the members of the Grand Navigation Group to collect addresses and get address information 
-from the reply.
+Update user fan number, guard number, charging number, and count guard 
+addresses.
 
 > -h, --help: show this help message and exit\
 > {update,address}: sub-command
@@ -115,7 +107,7 @@ sub-command: **update**
 bili-user update [-h] [--name {None}|STR] [--uid {None}|STR]
 ```
 
-Update the number of users' fans, members of the Grand Navigation Group, and charging members.
+Update the number of users' fans, members of the guards, and charging members.
 
 > -h, --help: show this help message and exit\
 > --name: username, either name or uid must be filled in (default: None)\
@@ -128,7 +120,7 @@ bili-user address [-h] [--name {None}|STR] [--uid {None}|STR]
                   [--mode {1,2}]
 ```
 
-Collect the addresses of members of the Great Navigation Group.
+Collect the addresses of members of the guards.
 
 > -h, --help: show this help message and exit\
 > --name: username, either name or uid must be filled in (default: None)\
@@ -143,18 +135,13 @@ Collect the addresses of members of the Great Navigation Group.
 bili-live [-h] {auto,monitor,process}
 ```
 
-Monitor and process live broadcast room data.\
-Record all danmu, gifts, SC, popularity values in the live broadcast. \
-Danmu with markings on the head or tail sent in the live broadcast room can be recorded for slicers 
-to record exciting moments.\
-Process data, generate changes in danmu numbers, revenue pie charts or changes, popularity changes, danmu word clouds 
-image, and live slicing suggestions.
+Monitor and process live broadcast room data.
 
 > -h, --help: show this help message and exit\
 > {auto,monitor,process}: sub-command
 > > auto: Automatic mode, automatically monitoring data at the beginning of the live broadcast, and automatically 
           processing all data after the end of the live broadcast. Data monitoring can be disconnected using a 
-          danmu.\
+          danmaku.\
 > > monitor: Monitoring mode, only for data monitoring without data processing.
 > > process: Processing mode, need to specify a data folder, which can be a data folder for a single live 
              broadcast, or a folder for a live broadcast room.
@@ -174,21 +161,22 @@ bili-live auto [-h] [--user-id {None}|INT] [--live-id {None}|INT]
 
 Automatic mode, automatically monitoring data at the beginning of the live 
 broadcast, and automatically processing all data after the end of the live 
-broadcast. Data monitoring can be disconnected inputting a danmu "###disconnect###".
+broadcast.
+Data monitoring can be disconnected inputting a danmaku "###disconnect###".
 
 > -h, --help: show this help message and exit\
 > --user-id: up uid, either user_id or live_id must be filled in (default: None)\
 > --live-id: live room id, either user_id or live_id must be filled in (default: None)\
-> --save-all-danmu: whether to save all danmu (default: True)\
-> --danmu-disconnect: whether to disconnect from the live broadcast room by sending danmu '###disconnect###' (default: True) 
+> --save-all-danmu: whether to save all danmaku (default: True)\
+> --danmu-disconnect: whether to disconnect from the live broadcast room by sending danmaku '###disconnect###' (default: True) 
 > --auto-disconnect: whether to disconnect from the live room automatically when the live broadcast ends (default: False)\
 > --max-retry: the maximum number of reconnection attempts when the live broadcast room is unexpectedly disconnected (default: 10)\
 > --retry-after: time interval for trying to initiate a reconnection after accidental disconnection, unit: second (default: 1)\
 > --revenue-interval: time interval for revenue statistics, unit: minute (default: 5)\
-> --danmu-interval: time interval for danmu situations, unit: second (default: 30)\
-> --robust: whether to filter marked danmu (default: True)\
-> --robust-interval: time interval for filtering marked danmu, unit: minute (default: 30)\
-> --mask: mask for generating danmu word cloud image (default: None)\
+> --danmu-interval: time interval for danmaku situations, unit: second (default: 30)\
+> --robust: whether to filter marked danmaku (default: True)\
+> --robust-interval: time interval for filtering marked danmaku, unit: minute (default: 30)\
+> --mask: mask for generating danmaku word cloud image (default: None)\
 > --forever: whether to long connect the live broadcast room (default: False)
 {: .block-tip }
 
@@ -206,8 +194,8 @@ Monitoring mode, only for data monitoring without data processing.
 > -h, --help: show this help message and exit\
 > --user-id: up uid, either user_id or live_id must be filled in (default: None)\
 > --live-id: live room id, either user_id or live_id must be filled in (default: None)\
-> --save-all-danmu: whether to save all danmu (default: True)\
-> --danmu-disconnect: whether to disconnect from the live broadcast room by sending danmu '###disconnect###' (default: True) 
+> --save-all-danmu: whether to save all danmaku (default: True)\
+> --danmu-disconnect: whether to disconnect from the live broadcast room by sending danmaku '###disconnect###' (default: True) 
 > --auto-disconnect: whether to disconnect from the live room automatically when the live broadcast ends (default: False)\
 > --max-retry: the maximum number of reconnection attempts when the live broadcast room is unexpectedly disconnected (default: 10)\
 > --retry-after: time interval for trying to initiate a reconnection after accidental disconnection, unit: second (default: 1)\
@@ -228,8 +216,8 @@ a single live broadcast, or a folder for a live broadcast room.
 > -h, --help: show this help message and exit\
 > --data-dir: the file where the data is located (default: None)\
 > --revenue-interval: time interval for revenue statistics, unit: minute (default: 5)\
-> --danmu-interval: time interval for danmu situations, unit: second (default: 30)\
-> --robust: whether to filter marked danmu (default: True)\
-> --robust-interval: time interval for filtering marked danmu, unit: minute (default: 30)\
-> --mask: mask for generating danmu word cloud image (default: None)
+> --danmu-interval: time interval for danmaku situations, unit: second (default: 30)\
+> --robust: whether to filter marked danmaku (default: True)\
+> --robust-interval: time interval for filtering marked danmaku, unit: minute (default: 30)\
+> --mask: mask for generating danmaku word cloud image (default: None)
 {: .block-tip }
